# MCP-Sentinel

./: .gitignore  Especificación_Técnica_Maestra_v1.1.md  LICENSE  README.md  docker-compose.agent-test.yml  docker-compose.yml
config/: sentinel.agent-host.conf.example  sentinel.agent-test.conf.example  sentinel.dev.conf.example
docker/: Dockerfile.agent  Dockerfile.base  Dockerfile.target
docs/: adding-command-sets.md  admin-api.md  agent-install.md  cli.md  deployment.md  mcp-api.md
memory/: MEMORY.md  project_reingenieria_target_gateway.md
scripts/: install-agent.sh
sentinel/: .dockerignore  alembic.ini  pyproject.toml  requirements.agent.txt  requirements.target.txt  requirements.txt  setup.cfg
sentinel/alembic/: env.py
sentinel/alembic/versions/: 20260228_0001_initial_schema.py  20260301_0002_add_execution_output.py  20260303_0003_add_command_allowed_paths.py  20260304_0004_add_command_require_sudo.py  20260319_0001_initial_schema.py
sentinel/common/: crypto.py  exceptions.py
sentinel/common/config/: __init__.py  agent.py  auth.py  conductor.py  database.py  keystone.py  messaging.py  target.py
sentinel/common/fixtures/: default_command_sets.py
sentinel/common/messaging/: __init__.py  rpc.py  transport.py
sentinel/common/models/: __init__.py  agent.py  audit.py  auth.py  base.py  gateway.py  group.py  policy.py  target.py
sentinel/common/schemas/: __init__.py  payload.py  requests.py
sentinel/sentinel_admin_api/: auth.py  deps.py  main.py  schemas.py
sentinel/sentinel_admin_api/routers/: agents.py  audit.py  auth.py  commandsets.py  gateways.py  groups.py  policies.py  targets.py  users.py
sentinel/sentinel_agent/: crypto.py  main.py
sentinel/sentinel_agent/drivers/: base.py  posix.py
sentinel/sentinel_agent/rpc/: consumer.py
sentinel/sentinel_cli/: audit.py  base.py  client.py  commandset.py  group.py  host.py  login.py  main.py  policy.py  user.py
sentinel/sentinel_conductor/: crypto.py  db.py  main.py  seeder.py
sentinel/sentinel_conductor/auth/: base.py  stub.py  telegram.py
sentinel/sentinel_conductor/rbac/: engine.py
sentinel/sentinel_conductor/rpc/: crud.py  server.py
sentinel/sentinel_mcp_api/: main.py
sentinel/sentinel_scheduler/: main.py
sentinel/sentinel_target/: crypto.py  main.py
sentinel/sentinel_target/drivers/: base.py  posix.py
sentinel/sentinel_target/rpc/: consumer.py
