[metadata]
name = mcp-sentinel
version = 0.1.0
description = Zero Trust orchestration framework for AI Agents (MCP)
long_description = file: README.md
author = MCP-Sentinel Contributors
license = Apache-2.0
python_requires = >=3.10

[options]
packages = find:
install_requires =
    # Async messaging
    oslo.messaging>=14.0.0
    # Configuration management
    oslo.config>=9.0.0
    oslo.log>=5.0.0
    oslo.context>=5.0.0
    # Plugin management
    stevedore>=5.0.0
    # CLI framework
    cliff>=4.0.0
    # Data validation
    pydantic>=2.0.0
    # Persistence
    sqlalchemy>=2.0.0
    alembic>=1.12.0
    psycopg2-binary>=2.9.0
    # Cryptography
    cryptography>=41.0.0
    # HTTP (Admin API & MCP API)
    fastapi>=0.110.0
    uvicorn[standard]>=0.27.0
    httpx>=0.27.0
    python-multipart>=0.0.9
    # Auth (Admin API standalone)
    python-jose[cryptography]>=3.3.0
    bcrypt>=4.0.0
    # Telegram 2FA plugin
    python-telegram-bot>=20.0
    # Utilities
    tenacity>=8.2.0

[options.extras_require]
openstack =
    openstacksdk>=3.0.0
    keystoneauth1>=5.0.0
ansible =
    ansible-runner>=2.3.0
dev =
    pytest>=7.4.0
    pytest-asyncio>=0.23.0
    pytest-cov>=4.1.0
    factory-boy>=3.3.0
    fakeredis>=2.0.0
    black>=23.0.0
    ruff>=0.1.0
    mypy>=1.5.0

# -----------------------------------------------------------------------
# Stevedore Entry Points
# -----------------------------------------------------------------------
[options.entry_points]

# Execution drivers loaded by sentinel-target
sentinel.target.drivers =
    posix_bash    = sentinel_target.drivers.posix:BashDriver
    ansible       = sentinel_target.drivers.ansible:AnsibleRunnerDriver [ansible]
    openstack_sdk = sentinel_target.drivers.openstack:OpenStackSDKDriver [openstack]

# 2FA providers loaded by sentinel-conductor
sentinel.auth.providers =
    telegram = sentinel_conductor.auth.telegram:TelegramBotProvider
    stub     = sentinel_conductor.auth.stub:StubAuthProvider

# CLI commands for sentinel-cli (cliff)
sentinel =
    login              = sentinel_cli.login:Login
    logout             = sentinel_cli.login:Logout

    host list          = sentinel_cli.host:ListHosts
    host show          = sentinel_cli.host:ShowHost
    host register      = sentinel_cli.host:RegisterHost
    host delete        = sentinel_cli.host:DeleteHost

    group list         = sentinel_cli.group:ListGroups
    group show         = sentinel_cli.group:ShowGroup
    group create       = sentinel_cli.group:CreateGroup
    group delete       = sentinel_cli.group:DeleteGroup
    group member list  = sentinel_cli.group:ListGroupMembers
    group member add   = sentinel_cli.group:AddGroupMember
    group member remove = sentinel_cli.group:RemoveGroupMember

    commandset list    = sentinel_cli.commandset:ListCommandSets
    commandset show    = sentinel_cli.commandset:ShowCommandSet
    commandset create  = sentinel_cli.commandset:CreateCommandSet
    commandset delete  = sentinel_cli.commandset:DeleteCommandSet
    command list       = sentinel_cli.commandset:ListCommands
    command add        = sentinel_cli.commandset:AddCommand
    command delete     = sentinel_cli.commandset:DeleteCommand

    policy list        = sentinel_cli.policy:ListPolicies
    policy show        = sentinel_cli.policy:ShowPolicy
    policy create      = sentinel_cli.policy:CreatePolicy
    policy delete      = sentinel_cli.policy:DeletePolicy

    audit log list     = sentinel_cli.audit:ListAuditLogs

    user list          = sentinel_cli.user:ListUsers
    user create        = sentinel_cli.user:CreateUser
    user delete        = sentinel_cli.user:DeleteUser

console_scripts =
    sentinel-conductor  = sentinel_conductor.main:main
    sentinel-target     = sentinel_target.main:main
    sentinel-scheduler  = sentinel_scheduler.main:main
    sentinel-mcp-api    = sentinel_mcp_api.main:main
    sentinel-admin-api  = sentinel_admin_api.main:main
    sentinel            = sentinel_cli.main:main
